--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,13 @@
-<p>app component works</p>
+<div class="row text-center">
+    <div class="col">
+        <h1>Contador</h1>
+        <h2>{{ contador }}</h2>
+    </div>
+</div>
+
+<div class="row text-center">
+    <div class="col">
+        <button class="btn btn-primary" (click)="incrementar()">Incrementar</button>
+        <button class="btn btn-info" (click)="decrementar()">Decrementar</button>
+    </div>
+</div>
