Se añade el componente hijo en el app.module.ts Se crea un contador en el hijo de la misma forma que se ha creado en el app.component.ts Se añade el html del componente hijo Se añade el componente hijo al html del app.component.html

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -11,3 +11,11 @@
         <button class="btn btn-info" (click)="decrementar()">Decrementar</button>
     </div>
 </div>
+
+<hr/>
+
+<div class="row text-center">
+    <div class="col">
+        <app-hijo></app-hijo>
+    </div>
+</div>
