Cambios para que el hijo envíe al padre el valor del contador:
· hijo.component.ts: Se añade el EventEmitter (de numbers) contadorCambio junto con la directiva @Output para emitir eventos
· hijo.component.ts: Cada vez que modifiquemos el valor de contadorHijo, tendrémos que emitir un evento con el nuevo valor del contadorHijo

· app.component.html: Añadimos el manejador del evento contadorCambio, que asígnará el nuevo valor al contador

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -16,6 +16,6 @@
 
 <div class="row text-center">
     <div class="col">
-        <app-hijo [contadorHijo]="contador"></app-hijo>
+        <app-hijo [contadorHijo]="contador" (contadorCambio)="contador=$event"></app-hijo>
     </div>
 </div>
