--- a/frontend/src/app/componentes/hijo/hijo.component.html
+++ b/frontend/src/app/componentes/hijo/hijo.component.html
@@ -7,3 +7,11 @@
         <button class="btn btn-info" (click)="demediar()">Demediar</button>
     </div>
 </div>
+
+<hr/>
+
+<div class="row text-center">
+    <div class="col">
+        <app-nieto></app-nieto>
+    </div>
+</div>
