Cambios para que el hijo envíe al nieto el valor del contador:
· nieto.component.ts: se añade la añotación @input al contadorNieto junto con el operador ! para indicar que el contadorNieto no va a ser nulo o undefined
· nieto.component.ts: se vacía el constructor, ya que el valor del contadorNieto vendrá del hijo
(· nieto.component.ts: también podría eliminarse el operador ! e igualarlo a algún valor, ya que será sobrescrito)

· hijo.component.html: se enlaza el valor del contadorHijo con el contadorNieto

--- a/frontend/src/app/componentes/hijo/hijo.component.html
+++ b/frontend/src/app/componentes/hijo/hijo.component.html
@@ -12,6 +12,6 @@
 
 <div class="row text-center">
     <div class="col">
-        <app-nieto></app-nieto>
+        <app-nieto [contadorNieto]="contadorHijo"></app-nieto>
     </div>
 </div>
