Cambios para que el nieto envíe al hijo el valor del contador:
· nieto .component.ts: Se añade el EventEmitter (de numbers) contadorCambio junto con la directiva @output para emitir eventos
· nieto .component.ts: Cada vez que modifiquemos el valor de contadorNieto, tendrémos que emitir un evento con el nuevo valor del contadorNieto

· hijo.component.html: Añadimos el manejador del evento contadorCambio, que asígnará el nuevo valor al contador

--- a/frontend/src/app/componentes/hijo/hijo.component.html
+++ b/frontend/src/app/componentes/hijo/hijo.component.html
@@ -12,6 +12,6 @@
 
 <div class="row text-center">
     <div class="col">
-        <app-nieto [contadorNieto]="contadorHijo"></app-nieto>
+        <app-nieto [contadorNieto]="contadorHijo" (contadorCambio)="contadorHijo=($event)"></app-nieto>
     </div>
 </div>
