Cambios para que el hijo emita el nuevo valor que ha venido del nieto:
· hijo.component.ts: creamos la funcion resetNieto que asignará el nuevo valor al contadorHijo y lanzara un evento que manejará el padre
· hijo.component.html: en vez de asignar directamente el nuevo valor en el html, llamamos a la función anteriormente creada

--- a/frontend/src/app/componentes/hijo/hijo.component.html
+++ b/frontend/src/app/componentes/hijo/hijo.component.html
@@ -12,6 +12,6 @@
 
 <div class="row text-center">
     <div class="col">
-        <app-nieto [contadorNieto]="contadorHijo" (contadorCambio)="contadorHijo=($event)"></app-nieto>
+        <app-nieto [contadorNieto]="contadorHijo" (contadorCambio)="resetNieto($event)"></app-nieto>
     </div>
 </div>
