--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -16,6 +16,6 @@
 
 <div class="row text-center">
     <div class="col">
-        <app-hijo [contadorHijo]="contador" (contadorCambio)="contador=$event"></app-hijo>
+        <app-hijo></app-hijo>
     </div>
 </div>
