Cambios para añadir a la página el nuevo botón que lanzará la acción MultiplicarPorFactor
· hijo.components.ts: Se importa la nueva acción, se añade una variable que guardará el factor por el que multiplicar y se añade la función multiplicar que lanzará la acción
· hijo.components.html: Se añade un input para introducir el factor mediante la directiva ngModel (notación "Banana in box", "[()]"). Se añade el nuevo botón con la función de multiplicar en el evento click
· app.module.ts: Se añade el import de FormsModule para usar la directiva ngModel

--- a/frontend/src/app/componentes/hijo/hijo.component.html
+++ b/frontend/src/app/componentes/hijo/hijo.component.html
@@ -1,9 +1,11 @@
 <h3>Contador</h3>
 <h4>{{ contadorHijo }}</h4>
+<p>Multiplicador: <input type="number" [(ngModel)]="multiplicador"></p>
 
 <div class="row text-center">
     <div class="col">
         <button class="btn btn-primary" (click)="duplicar()">Duplicar</button>
+        <button class="btn btn-primary" (click)="multiplicar()">Multiplicar</button>
         <button class="btn btn-info" (click)="demediar()">Demediar</button>
     </div>
 </div>
