--- a/frontend/src/app/componentes/hijo/hijo.component.html
+++ b/frontend/src/app/componentes/hijo/hijo.component.html
@@ -1,5 +1,5 @@
 <h3>Contador</h3>
-<h4>{{ contadorHijo }}</h4>
+<h4>{{ contadorHtmlHijo }}</h4>
 <p>Multiplicador: <input type="number" [(ngModel)]="multiplicador"></p>
 
 <div class="row text-center">
