--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div class="row text-center">
     <div class="col">
         <h1>Contador</h1>
-        <h2>{{ contadorHtmlApp }}</h2>
+        <h2> · como number: {{ contadorHtmlApp }}</h2>
+        <h2> · como observable: {{ contadorHtmlApp$ | async }}</h2>
     </div>
 </div>
 
