Actualización de todo el código para usar el observable de number y el selector del valor del contador: · app.component.ts: Al usar el selector, podemos omitir el nombre del estado. Se elimina también el resto del código para que no vaya creciendo desmesuradamente · app.component.html: Se elinima el contador number para dejar únicamente el contador observable · hijo.component.ts: Se añaden al componente hijo los últimos cambios que se habían añadido al componente app: se usa el constructor únicamente para la inyección de dependencias, se mueve el cuerpo al ngOnInit() y se usa un observable de number y el selector para el contador · hijo.component.html: Se sustituye el contador number por el contador observable y la directiva async · nieto.component.ts: Mismos cambios que en el componente hijo · nieto.component.html: Mismos cambios que en el componente hijo

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,8 +1,7 @@
 <div class="row text-center">
     <div class="col">
         <h1>Contador</h1>
-        <h2> · como number: {{ contadorHtmlApp }}</h2>
-        <h2> · como observable: {{ contadorHtmlApp$ | async }}</h2>
+        <h2>{{ contadorHtmlApp$ | async }}</h2>
     </div>
 </div>
 
