--- a/frontend/src/app/componentes/nieto/nieto.component.html
+++ b/frontend/src/app/componentes/nieto/nieto.component.html
@@ -1,5 +1,5 @@
 <h5>Contador</h5>
-<h6>{{ contadorHtmlNieto }}</h6>
+<h6>{{ contadorHtmlNieto$ | async }}</h6>
 
 <div class="row text-center">
     <div class="col">
