Cambios previos para usar efectos: · contador.state.ts: se añaden las variables estaCargando y tieneError · contador.selector.ts: se añade un selector para la variable estaCargando · contador.reducer.ts: se modifica el comportamiento de las acciones IncrementarAction y DecrementarAction · app.component.ts: se añade un observable para la variable estaCargando · app.component.html: en función del observable anterior, se muestra un gif para indicar que está cargando

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,11 @@
 <div class="row text-center">
     <div class="col">
-        <h1>Contador</h1>
+        <h1>Contador
+            <span *ngIf="(cargando$ | async)">
+                <img src="assets/cargando.gif" alt="Cargando..." style="width: 100px;"/>
+            </span>
+        </h1>
+
         <h2>{{ contadorHtmlApp$ | async }}</h2>
     </div>
 </div>
